# ai-bouncer

./: Cargo.toml  README.md
contracts/ai-bouncer-caller/: Cargo.toml
contracts/ai-bouncer-caller/src/: contract.rs  msg.rs
wasi/ai-bouncer/: Cargo.toml  README.md
wasi/ai-bouncer/src/: lib.rs
